# priority-applicative

./: CHANGELOG.md  LICENSE  README.md  priority-applicative.cabal
src/Control/Alternative/: Prio.hs
src/Control/Applicative/: Prio.hs
test/: Bench.hs  Common.hs  Main.hs  PrioAltTest.hs  PrioApTest.hs  Util.hs
