cabal-version:      3.0
name:               priority-applicative
version:            0.1.0.0
synopsis:           Applicatives with priorities
description:
    This package provides wrappers to conveniently control the order of
    execution of applicative effects with priorities.
license:            MIT
license-file:       LICENSE
author:             Soumik Sarkar
maintainer:         soumiksarkar.3120@gmail.com
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/meooow25/priority-applicative.git

common warnings
    ghc-options: -Wall

common test-bench-deps
    build-depends:
        containers
      , QuickCheck >= 2.14.3 && < 2.15
      , deepseq >= 1.4.2 && < 1.5
      , random >= 1.2.1 && < 1.3
      , tasty >= 1.5 && < 1.6
      , tasty-bench >= 0.3.5 && < 0.4
      , tasty-quickcheck >= 0.10.3 && < 0.11
      , transformers >= 0.5.2 && < 0.7

library
    import:           warnings
    exposed-modules:
        Control.Applicative.Prio
      , Control.Alternative.Prio
    build-depends:
        base >= 4.9.1.0 && < 5.0
      , containers >= 0.5.7 && < 0.8
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
    import:           test-bench-deps, warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        PrioApTest
      , PrioAltTest
      , Common
      , Util
    build-depends:
        base
      , priority-applicative

benchmark bench
    import:           test-bench-deps, warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Bench.hs
    other-modules:
        Common
    build-depends:
        base
      , priority-applicative
